# disassembly_toolkit

./: .gitignore  README.md
disassembly_pipeline/config/: camera_topic_params.json  drop_object.json  gripper_class_to_docker_restart_params.json  gripper_class_to_gripper_ee_config.json  jmove_above_table.json  look_at_table.json  pickup_object.json
disassembly_pipeline/config/robot_ee_settings/: CMakeLists.txt  README.md  gripper_dict.py  no_tool.json  p2_tc_and_adapter.json  package.xml  panda_2_vsg_config.json  tc_and_3jaw_chuck.json  tc_and_adapter.json  tc_and_adapter_IN_FRANKADESK.json  tc_and_vacuum_demo.json  tc_and_vacuum_original.json  vsgripper_frankadesk_config.json  vsgripper_frankadesk_config_17_10.json  weight_of_TC_and_flange_aluminum.txt
disassembly_pipeline/config/robot_ee_settings/old_unused_configs/: softhand_and_tc_neg45def_off_link8.txt  tc2_and_vsg.json  tc_and_45deg_offset_vacuumgripper.json  tc_and_adapter_and_bosch_screwdriver.json  tc_and_offset_vacuum_gripper.json  tc_and_offset_vacuum_gripper_bak.json  tc_and_pneumatic_gripper_twofinger.json  tc_and_screwdriver.json  tc_and_screwdriver_david.json  tc_and_softhand_45_deg.json  tc_and_vacuumgripper.json
disassembly_pipeline/disassembly_pipeline/: CMakeLists.txt  package.xml
disassembly_pipeline/dmp/: dmp.py  dmp_periodic.py  dmp_ros.py
disassembly_pipeline/poses/: CMakeLists.txt  package.xml  pose_database.json  pose_database.json.bak  pose_database.json.bak2  pose_database_old.json  saved_positions.py  store_pose.py  test_db.json.bak
disassembly_pipeline/scripts/: base_init.py  (+17 more)
(+92 files in other folders)
