<?xml version="1.0"?>
<package format="2">
  <name>poses</name>
  <version>0.2.0</version>
  <description>Pose database and utilities</description>
  <author email="gaspersavle13@gmail.com">Gasper Savle</author>
  <maintainer email="gaspersavle13@gmail.com">Gasper Savle</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
